@@ -30,7 +30,7 @@
 					<textcolor>Mod_Tags_Dark</textcolor>
 					<scroll>false</scroll>
 					<align>left</align>
-					<visible>Container.Content(episodes) | Container.Content(seasons)</visible>
+					<visible>[Container.Content(episodes) | Container.Content(seasons)] + ![stringcompare(Container.FolderPath,library://video/recentlyaddedmovies.xml/) | stringcompare(Container.FolderPath,videodb://4/) | stringcompare(Container.FolderPath,library://video/recentlyaddedepisodes.xml/) | stringcompare(Container.FolderPath,videodb://5/)]</visible>
 				</control>
 				<control type="label">
 					<posx>100</posx>
@@ -42,7 +42,7 @@
 					<scroll>false</scroll>
 					<align>left</align>
 					<animation effect="slide" end="40" condition="Container.Content(episodes) + SubString(ListItem.Episode,S) + ![StringCompare(ListItem.Episode,S1) | StringCompare(ListItem.Episode,S2) | StringCompare(ListItem.Episode,S3) | StringCompare(ListItem.Episode,S4) | StringCompare(ListItem.Episode,S5) | StringCompare(ListItem.Episode,S6) | StringCompare(ListItem.Episode,S7) | StringCompare(ListItem.Episode,S8) | StringCompare(ListItem.Episode,S9)]">Conditional</animation>
-					<animation effect="slide" end="-100" condition="![Container.Content(episodes) | Container.Content(seasons)]">Conditional</animation>
+					<animation effect="slide" end="-100" condition="![Container.Content(episodes) | Container.Content(seasons)] | [stringcompare(Container.FolderPath,library://video/recentlyaddedmovies.xml/) | stringcompare(Container.FolderPath,videodb://4/) | stringcompare(Container.FolderPath,library://video/recentlyaddedepisodes.xml/) | stringcompare(Container.FolderPath,videodb://5/)]">Conditional</animation>
 				</control>
 				<control type="label">
 					<posx>100</posx>
@@ -54,7 +54,7 @@
 					<scroll>false</scroll>
 					<align>left</align>
 					<animation effect="slide" end="40" condition="Container.Content(episodes) + SubString(ListItem.Episode,S) + ![StringCompare(ListItem.Episode,S1) | StringCompare(ListItem.Episode,S2) | StringCompare(ListItem.Episode,S3) | StringCompare(ListItem.Episode,S4) | StringCompare(ListItem.Episode,S5) | StringCompare(ListItem.Episode,S6) | StringCompare(ListItem.Episode,S7) | StringCompare(ListItem.Episode,S8) | StringCompare(ListItem.Episode,S9)]">Conditional</animation>
-					<animation effect="slide" end="-100" condition="![Container.Content(episodes) | Container.Content(seasons)]">Conditional</animation>
+					<animation effect="slide" end="-100" condition="![Container.Content(episodes) | Container.Content(seasons)] | [stringcompare(Container.FolderPath,library://video/recentlyaddedmovies.xml/) | stringcompare(Container.FolderPath,videodb://4/) | stringcompare(Container.FolderPath,library://video/recentlyaddedepisodes.xml/) | stringcompare(Container.FolderPath,videodb://5/)]">Conditional</animation>
 				</control>	
 				<control type="label">
 					<posx>-20</posx>
@@ -137,11 +137,11 @@
 							<textcolor>mod-infotags-alt</textcolor>
 							<scroll>false</scroll>
 							<align>left</align>
-							<visible>Container.Content(episodes) | Container.Content(seasons)</visible>
+							<visible>[Container.Content(episodes) | Container.Content(seasons)] + ![stringcompare(Container.FolderPath,library://video/recentlyaddedmovies.xml/) | stringcompare(Container.FolderPath,videodb://4/) | stringcompare(Container.FolderPath,library://video/recentlyaddedepisodes.xml/) | stringcompare(Container.FolderPath,videodb://5/)]</visible>
 						</control>
 						<control type="group">
 							<animation effect="slide" end="40" condition="Container.Content(episodes) + SubString(ListItem.Episode,S) + ![StringCompare(ListItem.Episode,S1) | StringCompare(ListItem.Episode,S2) | StringCompare(ListItem.Episode,S3) | StringCompare(ListItem.Episode,S4) | StringCompare(ListItem.Episode,S5) | StringCompare(ListItem.Episode,S6) | StringCompare(ListItem.Episode,S7) | StringCompare(ListItem.Episode,S8) | StringCompare(ListItem.Episode,S9)]">Conditional</animation>
-							<animation effect="slide" end="-100" condition="![Container.Content(episodes) | Container.Content(seasons)]">Conditional</animation>
+							<animation effect="slide" end="-100" condition="![Container.Content(episodes) | Container.Content(seasons)] | [stringcompare(Container.FolderPath,library://video/recentlyaddedmovies.xml/) | stringcompare(Container.FolderPath,videodb://4/) | stringcompare(Container.FolderPath,library://video/recentlyaddedepisodes.xml/) | stringcompare(Container.FolderPath,videodb://5/)]">Conditional</animation>
 							<posx>100</posx>
 							<control type="label">
 								<posx>0</posx>
