@@ -139,10 +139,11 @@
 							<textcolor>77white</textcolor>
 							<scroll>false</scroll>
 							<align>left</align>
+							<visible>[Container.Content(episodes) | Container.Content(seasons)] + ![stringcompare(Container.FolderPath,library://video/recentlyaddedmovies.xml/) | stringcompare(Container.FolderPath,videodb://4/) | stringcompare(Container.FolderPath,library://video/recentlyaddedepisodes.xml/) | stringcompare(Container.FolderPath,videodb://5/)]</visible>
 						</control>
 						<control type="group">
 							<animation effect="slide" end="40" condition="Container.Content(episodes) + SubString(ListItem.Episode,S) + ![StringCompare(ListItem.Episode,S1) | StringCompare(ListItem.Episode,S2) | StringCompare(ListItem.Episode,S3) | StringCompare(ListItem.Episode,S4) | StringCompare(ListItem.Episode,S5) | StringCompare(ListItem.Episode,S6) | StringCompare(ListItem.Episode,S7) | StringCompare(ListItem.Episode,S8) | StringCompare(ListItem.Episode,S9)]">Conditional</animation>
-							<animation effect="slide" end="-100" condition="Container.Content(tvshows) | Container.Content(movies)">Conditional</animation>
+							<animation effect="slide" end="-100" condition="Container.Content(tvshows) | Container.Content(movies) | stringcompare(Container.FolderPath,library://video/recentlyaddedmovies.xml/) | stringcompare(Container.FolderPath,videodb://4/) | stringcompare(Container.FolderPath,library://video/recentlyaddedepisodes.xml/) | stringcompare(Container.FolderPath,videodb://5/)">Conditional</animation>
 							<control type="label">
 								<posx>100</posx>
 								<posy>4</posy>
@@ -203,10 +204,11 @@
 								<textcolor>mod-infotags-alt</textcolor>
 								<scroll>false</scroll>
 								<align>left</align>
+								<visible>[Container.Content(episodes) | Container.Content(seasons)] + ![stringcompare(Container.FolderPath,library://video/recentlyaddedmovies.xml/) | stringcompare(Container.FolderPath,videodb://4/) | stringcompare(Container.FolderPath,library://video/recentlyaddedepisodes.xml/) | stringcompare(Container.FolderPath,videodb://5/)]</visible>
 							</control>
 							<control type="group">
 								<animation effect="slide" end="40" condition="Container.Content(episodes) + SubString(ListItem.Episode,S) + ![StringCompare(ListItem.Episode,S1) | StringCompare(ListItem.Episode,S2) | StringCompare(ListItem.Episode,S3) | StringCompare(ListItem.Episode,S4) | StringCompare(ListItem.Episode,S5) | StringCompare(ListItem.Episode,S6) | StringCompare(ListItem.Episode,S7) | StringCompare(ListItem.Episode,S8) | StringCompare(ListItem.Episode,S9)]">Conditional</animation>
-								<animation effect="slide" end="-100" condition="Container.Content(tvshows) | Container.Content(movies)">Conditional</animation>
+								<animation effect="slide" end="-100" condition="Container.Content(tvshows) | Container.Content(movies) | stringcompare(Container.FolderPath,library://video/recentlyaddedmovies.xml/) | stringcompare(Container.FolderPath,videodb://4/) | stringcompare(Container.FolderPath,library://video/recentlyaddedepisodes.xml/) | stringcompare(Container.FolderPath,videodb://5/)">Conditional</animation>
 								<control type="label">
 									<posx>100</posx>
 									<posy>4</posy>
